# HexIntent

./: .gitignore  README.md  build.gradle  gradle.properties  manifestation-hexwright.code-workspace  pyproject.toml
.github/workflows/: build_docs.yml  docs-pages.yml  release-jar.yml
.hexdoc/: manifestation.hexdoc.json
_site/dst/docs/: index.html
_site/dst/docs/meta/: sitemap-minecraft.json  sitemap.json
doc/: README.md  hexdoc.toml  pattern_stubs.json
doc/resources/assets/manifestation/lang/: en_us.flatten.json5  zh_cn.flatten.json5
doc/src/hexdoc_hexintent/: __gradle_version__.py  _hooks.py
doc/src/hexdoc_manifestation/: __gradle_version__.py  __init__.py  __version__.py  _hooks.py  pattern_sync.py
docs/: hex-pattern-scribe.html  index.html  index.md  patterns.html
docs/meta/: sitemap-minecraft.json  sitemap.json
docs/v/2.1.6/1.0.0/en_us/: .sitemap-marker.json  index.html  index.js
docs/v/2.1.7/: index.html
docs/v/2.1.7/1.0.0/en_us/: .sitemap-marker.json  index.html  index.js  textures.css
docs/v/latest/main/en_us/: .sitemap-marker.json  index.html  index.js  textures.css
docs/v/latest/main/zh_cn/: .sitemap-marker.json  index.html  index.js  textures.css
run/config/: manifestation.json
run/crash-reports/: crash-2026-05-23_10.22.31-client.txt  crash-2026-05-23_10.25.38-client.txt  crash-2026-05-23_10.44.45-client.txt  crash-2026-05-23_11.14.58-client.txt  crash-2026-05-23_11.17.19-client.txt  crash-2026-05-23_11.23.06-client.txt
src/main/resources/: fabric.mod.json  manifestation.mixins.json
src/main/resources/assets/blocks/: intentproxy.json
src/test/resources/dustlab/: dustlab-particles-60352997.json
(+998 files in other folders)
